fix: toolbar css

--- a/src/app/views/components/toolbar/toolbar.component.html
+++ b/src/app/views/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<p-menubar [style]="{'height':'70px'}" [model]="items">
+<p-menubar [model]="items">
   <ng-template pTemplate="start"></ng-template>
   <ng-template pTemplate="end">
     <span class="container-input">
