--- a/src/app/views/components/toolbar/toolbar.component.scss
+++ b/src/app/views/components/toolbar/toolbar.component.scss
@@ -12,10 +12,13 @@
     border: none;
     border-radius: 0;
     transition: all 0.3s ease-in-out;
+    height: 70px;
 
     .p-menubar-root-list .p-menuitem .p-menuitem-link {
       position: relative;
       transition: all 0.3s ease-in-out;
+      margin-left: 15px;
+      margin-right: -15px;
 
       &::before {
         content: '';
