--- a/src/app/views/features/contract/view-contract/view-contract.component.scss
+++ b/src/app/views/features/contract/view-contract/view-contract.component.scss
@@ -16,7 +16,8 @@ button {
   padding: 10px 20px;
   display: flex;
   font-size: 15px;
-  width: 90px;
+  min-width:90px;
+  width: inherit;
   text-transform: uppercase;
   cursor: default;
   transform: skew(-21deg);
@@ -28,34 +29,4 @@ button {
 .has-check {
   box-shadow: 6px 6px 12px #c5c5c5,
   -6px -6px 12px #ffffff;
-}
-
-
-.has-check::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 100%;
-  left: 0;
-  background: linear-gradient(to right, #0CABA8 0%, #2E5C6E 100%);
-  opacity: 0;
-  z-index: -1;
-  transition: all 0.5s;
-}
-
-.has-check:active {
-  transform: scale(1.05), skew(-21deg);
-  box-shadow: inset 3px 3px 6px #b5b5b5,
-  inset -3px -3px 6px #ffffff;
-}
-
-.has-check:hover {
-  color: #fff;
-}
-
-.has-check:hover::before {
-  left: 0;
-  right: 0;
-  opacity: 1;
 }
