--- a/src/app/views/features/quote/view-quote/view-quote.component.scss
+++ b/src/app/views/features/quote/view-quote/view-quote.component.scss
@@ -1,1 +1,31 @@
 @import 'src/app/app.component.scss';
+
+body {
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.span {
+  display: inline-block;
+  transform: skew(21deg);
+}
+button {
+  background: #FFFFFF;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  display: flex;
+  font-size: 15px;
+  min-width:90px;
+  width: inherit;
+  text-transform: uppercase;
+  cursor: default;
+  transform: skew(-21deg);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  overflow: hidden;
+  margin-left:10px ;
+}
+
+.has-check {
+  box-shadow: 6px 6px 12px #c5c5c5,
+  -6px -6px 12px #ffffff;
+}
