--- a/src/app/views/components/dashboard/dashboard.component.scss
+++ b/src/app/views/components/dashboard/dashboard.component.scss
@@ -2,7 +2,7 @@
 
 .tiles {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 2fr);
   column-gap: 1rem;
   row-gap: 1rem;
   margin-top: 1.25rem;
@@ -20,9 +20,9 @@
   border-radius: 8px;
   background-color: #f4f5f7;
   color: #003C54;
-  box-shadow: 5px 5px 5px #CFCFCF;
-  border: 1px solid #41829B;
-  min-height: 200px;
+  box-shadow: 3px 3px 3px #CFCFCF;
+  //border: 1px solid #41829B;
+  //min-height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -31,6 +31,7 @@
 
   &:hover {
     transform: translateY(-5px);
+    cursor: pointer;
   }
 
   //
@@ -149,6 +150,8 @@ textarea {
 a {
   color: inherit;
 }
+
+
 
 
 
